--- a/src/app/client/home/home.component.html
+++ b/src/app/client/home/home.component.html
@@ -2,7 +2,8 @@
   [mostrarMapa]="mostrarMapa"
   (onNewComponente)="controlarCategoria($event)"
   (ocultarMapa)="ocultarCoordenadas($event)"
-  (ocultarOpciones)="hiddeOpciones($event)">
+  (ocultarOpciones)="hiddeOpciones($event)"
+  style="z-index: 10;">
 </app-navbar-mobile>
 <app-navbar-desktop class="n-desktop"
   [actualizarCarrito]="actualizarCarrito"
