[UPDATE] se agrego la comision al pedido de las ordenes

--- a/src/app/client/editar-perfil/editar-perfil.component.html
+++ b/src/app/client/editar-perfil/editar-perfil.component.html
@@ -89,7 +89,7 @@
             </h6>
         </div>
         <div class="col-6 d-flex justify-content-end">
-            <button type="submit" class="btn btn-primary" (click)="subirImagen()" (click)="limpiar()">
+            <button type="submit" class="btn btn-primary" (click)="actualizarPerfil()" (click)="limpiar()">
                 Agregar
             </button>
         </div>
