[UPDATE] mostrar informacion del usuario en home, adjuntar info del usuario a la ordenque realiza

--- a/src/app/client/navbar-desktop/navbar-desktop.component.html
+++ b/src/app/client/navbar-desktop/navbar-desktop.component.html
@@ -36,8 +36,8 @@
             <!--<div class="mx-2" style="background: url('../../../assets/img/home/profile-icon.png'); width: 40px; height: 40px; background-size: cover;"></div>-->
           </div>
           <div class="col-9">
-            <p class="my-0 text-color">Goku</p>
-            <p class="my-0 text-color-min">correo@gmail.com</p>
+            <p class="my-0 text-color">{{nombreClient}}&nbsp;{{apellidoClient}}</p>
+            <p class="my-0 text-color-min">{{correoClient}}</p>
           </div>
         </div>
 
