--- a/src/app/client/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/client/navbar-mobile/navbar-mobile.component.html
@@ -26,8 +26,8 @@
         <!--<div class="mx-2" style="background: url('../../../assets/img/home/profile-icon.png'); width: 40px; height: 40px; background-size: cover;"></div>-->
       </div>
       <div class="col-6">
-        <p class="my-0 text-color">Goku</p>
-        <p class="my-0 text-color">correo@gmail.com</p>
+        <p class="my-0 text-color">{{nombreClient}}&nbsp;{{apellidoClient}}</p>
+        <p class="my-0 text-color">{{correoClient}}</p>
       </div>
     </div>
 
