--- a/src/app/client/navbar-desktop/navbar-desktop.component.html
+++ b/src/app/client/navbar-desktop/navbar-desktop.component.html
@@ -17,7 +17,7 @@
     <ul class="navbar-nav px-2 profile-settings" (click)="showSettings()" (click)="mostrarCarrito = false">
       <li class="nav-item img-profile d-flex align-items-center justify-content-center">
         <!--<div class="mx-2" style="background: url('../../../assets/img/home/profile-icon.png'); width: 40px; height: 40px; background-size: cover;"></div>-->
-        <img class="f-perfil" src="../../../assets/img/home/gohan.jpg" width="45" alt="">
+        <img class="f-perfil" [src]="imgPerfil != '' ? 'http://localhost:3000/'+imgPerfil : '../../../assets/img/home/gohan.jpg'" width="45" alt="">
       </li>
     </ul>
   </div>
@@ -31,7 +31,7 @@
         <div class="row px-2 d-flex justify-content-center pt-2 pb-1">
           <div class="col-3 d-flex align-items-center">
             <div class="img-profile">
-              <img class="f-perfil" src="../../../assets/img/home/gohan.jpg" width="35" alt="">
+              <img class="f-perfil" [src]="imgPerfil != '' ? 'http://localhost:3000/'+imgPerfil : '../../../assets/img/home/gohan.jpg'" width="35" alt="">
             </div>
             <!--<div class="mx-2" style="background: url('../../../assets/img/home/profile-icon.png'); width: 40px; height: 40px; background-size: cover;"></div>-->
           </div>
