--- a/src/app/client/pagos/pagos.component.html
+++ b/src/app/client/pagos/pagos.component.html
@@ -86,7 +86,7 @@
     </div>
     <div class="modal-body" style="padding-top: 0px; padding-bottom: 0px;">
       <!--<ngb-alert type="success" class="mt-1" *ngIf="successMessage">{{ successfull }}</ngb-alert>-->
-      <form [formGroup]="formPagos" (ngSubmit)="pagar()">
+      <form [formGroup]="formPagos" (ngSubmit)="limpiar()">
         <div class="form-group py-2" style="margin-bottom: 0px; padding-bottom: 0px;">
           <label for="inputNumeroTarjeta">Tarjeta de crédito</label>
           <input formControlName="numeroTarjeta" type="text" class="form-control" id="inputNumeroTarjeta" placeholder="visa, mastercard, discover" required>
@@ -111,7 +111,7 @@
       </form>
     </div>
     <div class="modal-footer">
-      <button [disabled]="formPagos.invalid" type="submit" class="btn btn-primary" (click)="SuccessfullMessage()" (click)="modal.close()">      
+      <button [disabled]="formPagos.invalid" type="submit" class="btn btn-primary" (click)="pagar()" (click)="SuccessfullMessage()" (click)="limpiar()" (click)="modal.close()">      
         Confirmar pago
       </button>
       <button type="button" class="btn btn-outline-danger mr-2" (click)="modal.close()" (click)="limpiar()">Cancelar</button>
